Se agregan metodos para el RF1 y RF2

--- a/WebContent/WEB-INF/ConnectionData/conexion.properties
+++ b/WebContent/WEB-INF/ConnectionData/conexion.properties
@@ -1,4 +1,4 @@
 url= jdbc:oracle:thin:@fn3.oracle.virtual.uniandes.edu.co\:1521\:prod
-usuario= ISIS2304A301810
-clave= mY9nZnlFyo
+usuario= ISIS2304A021810
+clave= pRYUsO8MEi
 driver= oracle.jdbc.driver.OracleDriver
